Fix alignment of text inside buttons in Chrome (#691)

--- a/projects/pastanaga-angular/src/styles/components/_buttons.scss
+++ b/projects/pastanaga-angular/src/styles/components/_buttons.scss
@@ -1,6 +1,7 @@
 @import '../variables';
 
 .pa-button {
+  align-items: center;
   background: transparent;
   border: none;
   border-radius: $border-radius-button;
